various cleanups and updates. Some partial new functionality started.