@@ -60,6 +60,11 @@ Adding option similar to:
 
 will force console/standard-out redirection to that file. If filename already exist, it is renamed.
 
+You may need the following Java VM arguments depending on JDK version and setup/defaults for some variations/branches of the code;
+- --add-exports java.base/java.lang=ALL-UNNAMED
+- --add-exports java.desktop/sun.awt=ALL-UNNAMED
+- --add-exports java.desktop/sun.java2d=ALL-UNNAMED
+
 
 ## Performance
 Not much has been tuned at this point. I made some improvements when performance was so poor as to prevent running default base creation for any meaningful number of primes. I'm more interested in improvements at the data structure selection level than anything else this moment so that will be the focus for now. The creation of triples does use CompletableFuture (1 per target prime) which does help with that process - running for 500 primes still takes 1+ minutes though. The logging to console out is probably one of the largest time consumers (especially when running in an IDE such as Eclipse) - I may switch to file output and see what difference it makes. If that simple change produces a reasonable speedup then it allows faster turn-around times for other changes I want to make.
@@ -252,3 +257,4 @@ information and then new base generation, logging and graphing actions are added
 	- More metrics generation
 	- Specialized data structures
 	- Better support for tracking performance (run-time) of the various stages (prime determination, prime bases generation, logging, etc).
+	- Add Optional.isPresent/isEmpty checks to the 12 or so remaining items needing it.
